# change-file-icon

./: .gitignore  Backend.cpp  Backend.h  CMakeLists.txt  ImageHandler.cpp  ImageHandler.h  Main.qml  README.md  WindowsFunctions.cpp  WindowsFunctions.h  main.cpp  todo.txt
